@@ -1,5 +1,9 @@
 2009-11-13  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* i386-dis.c (OP_E_extended): Removed.
+
+2009-11-13  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* i386-dis.c (print_insn): Check rex_ignored.
 
 2009-11-13  H.J. Lu  <hongjiu.lu@intel.com>
